--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url("https://www.nasa.gov/sites/default/files/thumbnails/image/potw1805a.jpg")
+    background-image: url("https://www.nasa.gov/sites/default/files/thumbnails/image/potw1805a.jpg");
+    background-size: cover;
 }
 
 .navbar {
