--- a/src/components/probability/probability.css
+++ b/src/components/probability/probability.css
@@ -1,4 +1,4 @@
-.jumbotron {
+/* .jumbotron {
     background: none
 }
 
@@ -6,6 +6,6 @@
     text-align: center
 }
 
-/* .probDriveGif { 
+.probDriveGif { 
 
 } */
