--- a/src/components/home.css
+++ b/src/components/home.css
@@ -14,17 +14,18 @@ p {
     color: lightgreen
 }
 
-.loginBtn {
-    display: flex;
+.loginButton {
+    display: inline-block;
     justify-content: center;
-    margin-left: 5px;
+    /* margin-left: 5px; */
+    /* margin-right: 5px; */
     margin-top: 20px;
     margin-bottom: 15px;
 }
 
-.logoutBtn {
-    display: flex;
+.logoutButton {
+    display: inline-block;
     justify-content: center;
-    margin-left: 5px;
+    margin-left: 20px;
     margin-bottom: 15px;
 }
