--- a/src/components/authentication/register.css
+++ b/src/components/authentication/register.css
@@ -1,3 +1,39 @@
 h2 {
-    color: silver
+    color: #FFFFFF
+}
+
+.newUserForm {
+    width: 500px;
+    display: inline-block;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+}
+
+.newUserEmail {
+    width: 500px;
+    display: inline-block;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+}
+
+.newUserPassword {
+    width: 500px;
+    display: inline-block;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+}
+
+.addNewUserBtn {
+    margin-left: 10px;
+}
+
+.pleaseRegister {
+    margin-left: 10px;
+    
 }
