--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://www.nasa.gov/sites/default/files/thumbnails/image/potw1805a.jpg");
+    background-image: url("https://www.hdwallpapers.in/download/warp_abstract-HD.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
