--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -2,7 +2,7 @@ body {
     background-image: url("https://www.hdwallpapers.in/download/warp_abstract-HD.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    /* background-position: center; */
 }
 
 .navbar {
