--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,6 +1,9 @@
 .jumbotron {
-    background: none;
-    /* background-color: transparent; */
+    /* background: none; */
+    margin-top: 50px;
+    margin-left: 5px;
+    max-width: 900px;
+    background-color: blue;
 }
 
 h1 {
@@ -36,7 +39,7 @@ p {
     display: inline-block;
     justify-content: center;
     margin-left: 5px;
-    margin-right: 250px;
+    margin-right: 200px;
     margin-bottom: 7px;
 }
 
