change styling for opportunities

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -3,7 +3,7 @@
     margin-top: 50px;
     margin-left: 5px;
     max-width: 900px;
-    background-color: blue;
+    background-color:navy;
 }
 
 h1 {
