--- a/src/components/products/productDetails.css
+++ b/src/components/products/productDetails.css
@@ -2,6 +2,16 @@ h2 {
     color: white
     }
     
-    p {
+p {
     color: white
-    }
+}
+
+.productDetailsCard {
+        width: 720px;
+        /* margin-left: 500px; */
+        /* margin-top: 10px; */
+        top: 50%;
+        left: 50%;
+      /* bring your own prefixes */
+        transform: translate(-50%, -50%);
+}
