--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,6 +1,7 @@
 body {
     /* background-image: url("https://www.hdwallpapers.in/download/warp_abstract-HD.jpg"); */
-    background-image: url("https://ak.picdn.net/shutterstock/videos/24201787/thumb/3.jpg");
+    /* background-image: url("https://ak.picdn.net/shutterstock/videos/24201787/thumb/3.jpg"); */
+    background-image: url("https://wallpaperaccess.com/full/1642286.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     /* background-position: center; */
