--- a/src/components/sales/sales.css
+++ b/src/components/sales/sales.css
@@ -67,7 +67,7 @@ h1.salesHeader {
     /* margin-bottom: 15px; */
 }
 
-.probDriveListCard {
+.salesCard {
     width: 720px;
     margin-left: 10px;
     margin-top: 10px;
