--- a/src/components/sales/sales.css
+++ b/src/components/sales/sales.css
@@ -22,33 +22,24 @@ h1.salesHeader {
 }
 
 .driveBtn {
-    /* width: 500px; */
     display: inline-block;
-    /* justify-content: center; */
-    /* margin-left: 5px; */
-    /* margin-top: 20px; */
 }
 
 .previousDriveTicketsBtn {
-    /* width: 250px; */
     display: inline-block;
-    /* justify-content: center; */
-    /* margin-left: 5px; */
-    /* margin-top: 20px; */
-
 }
 
-.driveTicketDetailsCard {
+.salesDetailsCard {
     width: 720px;
     margin-left: 10px;
     margin-top: 10px;
 }
 
-.editUserDriveTicketBtn {
+.editSaleBtn {
     margin-right: 5px;
 }
 
-.deleteUserDriveTicketBtn {
+.deleteSaleBtn {
     margin-right: 5px;
 }
 
@@ -57,14 +48,11 @@ h1.salesHeader {
     justify-content: center;
     margin-left: 10px;
     margin-right: 20px;
-    /* margin-bottom: 15px; */
 }
 
 .previousDriveTicketsButton {
     display: inline-block;
     justify-content: center;
-    /* margin-left: 20px; */
-    /* margin-bottom: 15px; */
 }
 
 .salesCard {
