changes to login and styling

--- a/src/components/authentication/login.css
+++ b/src/components/authentication/login.css
@@ -13,7 +13,7 @@ h3 {
     color: white
 }
 
-.loginEmailForm {
+.loginUserNameForm {
     width: 500px;
     display: inline-block;
     justify-content: center;
