--- a/src/components/home.css
+++ b/src/components/home.css
@@ -3,7 +3,7 @@
     /* margin-top: 100px; */
     /* margin-left: 400px; */
     max-width: 800px;
-    background-color: indianred;
+    background-color: #0f52ba;
     position: fixed;
   top: 50%;
   left: 50%;
