--- a/src/components/products/productDetails.css
+++ b/src/components/products/productDetails.css
@@ -15,3 +15,11 @@ p {
       /* bring your own prefixes */
         transform: translate(-50%, -50%);
 }
+
+.editProductBtn {
+  margin-right: 5px;
+}
+
+.deleteProductBtn {
+  margin-right: 5px;
+}
