--- a/src/components/sales/sales.css
+++ b/src/components/sales/sales.css
@@ -23,3 +23,27 @@ h1.salesHeader {
     margin-left: 10px;
     margin-top: 10px;
 }
+
+.editSaleNameForm {
+    width: 500px;
+    display: inline-block;
+    justify-content: center;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+  }
+
+.editSaleProductForm {
+    width: 500px;
+    display: inline-block;
+    justify-content: center;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+  }
+
+.editSaleBtn {
+    margin-left: 10px;
+}
