--- a/src/components/authentication/register.css
+++ b/src/components/authentication/register.css
@@ -6,6 +6,7 @@ h2 {
     width: 500px;
     display: inline-block;
     justify-content: center;
+    margin-top: 20px;
     margin-left: 10px;
     margin-right: 20px;
     margin-bottom: 5px;
@@ -15,6 +16,7 @@ h2 {
     width: 500px;
     display: inline-block;
     justify-content: center;
+    margin-top: 20px;
     margin-left: 10px;
     margin-right: 20px;
     margin-bottom: 5px;
@@ -24,6 +26,7 @@ h2 {
     width: 500px;
     display: inline-block;
     justify-content: center;
+    margin-top: 20px;
     margin-left: 10px;
     margin-right: 20px;
     margin-bottom: 5px;
