--- a/src/components/leads/leads.css
+++ b/src/components/leads/leads.css
@@ -1,10 +1,14 @@
 h1.leadsHeader {
     color: white;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-top: 25px;
 }
 
 .createQualifiedLead {
+    margin-top: 20px;
+}
+
+.editLead {
     margin-top: 20px;
 }
 
